--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "json-server --watch ./Db/db.json --port 5000"
+    "start": "json-server ./Db/db.json --port 10000 --host 0.0.0.0 --no-static"
+
   },
   "author": "",
   "license": "ISC",
